Fix runtime/Benchmark configuration